thirdparty/unidac/Include/Delphi28/Win32/LiteCallVirtual.hpp


//-- forward type declarations -----------------------------------------------
struct TFuncDef;

struct TSQLite3;

struct TSQLite3Context;

struct TSQLite3Context387;

struct stm;

struct sqlite3_codec;

//-- type declarations -------------------------------------------------------
typedef System::Byte u8;


typedef System::Word u16;


typedef __int64 i64;


typedef TFuncDef *pFuncDef;


struct DECLSPEC_DRECORD TFuncDef
{
public:
	short nArg;
	System::Byte iPrefEnc;
	System::Byte flags;
	void *pUserData;
};



struct DECLSPEC_DRECORD TSQLite3
{
public:
	void *pVfs;
	void *pVdbe;
	void *pDfltColl;
	void *mutex;
	void *aDb;
	int nDb;
};



struct DECLSPEC_DRECORD TSQLite3Context
{
public:
	TFuncDef *pFunc;
};



struct DECLSPEC_DRECORD TSQLite3Context387
{
public:
	void *pOut;
	TFuncDef *pFunc;
};



typedef void * pSQLite3;


typedef void * pSQLite3Stmt;


typedef void * pSQLite3Context;


typedef void * pSQLite3Value;


typedef void * pSQLite3Backup;


typedef TSQLite3Context *pContext;


typedef TSQLite3Context387 *pContext387;


typedef int __cdecl (*TCallBackLiteCollation)(void * pUserData, int StrSize1, const void * pStr1, int StrSize2, const void * pStr2);


typedef void __cdecl (*TCallBackLiteFunction)(pContext Context, int ParamCount, void * pData);


typedef void __cdecl (*TCallBackLiteFunction387)(pContext387 Context, int ParamCount, void * pData);


typedef stm *ptm;
struct DECLSPEC_DRECORD stm
{
public:
	int tm_sec;
	int tm_min;
	int tm_hour;
	int tm_mday;
	int tm_mon;
	int tm_year;
	int tm_wday;
	int tm_yday;
	int tm_isdst;
};


typedef sqlite3_codec *psqlite3_codec;


struct DECLSPEC_DRECORD sqlite3_codec
{
public:
	int __cdecl (*xKeyV2)(void * pSQLite, char * dbName, char * key, int size);
	int __cdecl (*xRekeyV2)(void * pSQLite, char * dbName, char * newkey, int size);
	void __cdecl (*xActivateSee)(char * zPassPhrase);
	int __cdecl (*xCodecAttach)(void * pSQLite, int nDb, char * key, int size, Liteconstsvirtual::TLiteEncryptionAlgorithm Algorithm/* = (Liteconstsvirtual::TLiteEncryptionAlgorithm)(0x7)*/);
	void __cdecl (*xCodecGetKey)(void * pSQLite, int nDb, void * &key, PINT &size);
	int __cdecl (*xCustomPragma)(void * pSQLite, int nDb, char * Left, char * Right);
};



typedef void * __cdecl (*Tsqlite3_malloc)(int n);


typedef int __cdecl (*Tsqlite3_open)(char * filename, /* out */ void * &ppDb);


typedef int __cdecl (*Tsqlite3_open16)(System::WideChar * filename, /* out */ void * &ppDb);


typedef int __cdecl (*Tsqlite3_open_v2)(char * filename, /* out */ void * &ppDb, int flags, char * zVfs);


typedef int __cdecl (*Tsqlite3_close)(void * pDb);


typedef int __cdecl (*Tsqlite3_errcode)(void * pDb);


typedef int __cdecl (*Tsqlite3_extended_errcode)(void * pDb);


typedef int __cdecl (*Tsqlite3_extended_result_codes)(void * pDb, int onoff);


typedef char * __cdecl (*Tsqlite3_errmsg)(void * pDb);


typedef __int64 __cdecl (*Tsqlite3_last_insert_rowid)(void * pDb);


typedef int __cdecl (*Tsqlite3_changes)(void * pDb);


typedef int __cdecl (*Tsqlite3_prepare_v2)(void * db, char * zSql, int nByte, /* out */ void * &ppStmt, /* out */ void * &pzTail);


typedef int __cdecl (*Tsqlite3_step)(void * pStmt);


typedef int __cdecl (*Tsqlite3_reset)(void * pStmt);


typedef int __cdecl (*Tsqlite3_finalize)(void * pStmt);


typedef int __cdecl (*Tsqlite3_column_count)(void * pStmt);


typedef int __cdecl (*Tsqlite3_column_type)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_origin_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_table_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_database_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_decltype)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_table_column_metadata)(void * pDb, void * zDbName, void * zTableName, void * zColumnName, /* out */ void * &pzDataType, /* out */ void * &pzCollSeq, /* out */ int &pNotNull, /* out */ int &pPrimaryKey, /* out */ int &pAutoinc);


typedef void * __cdecl (*Tsqlite3_column_blob)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_column_bytes)(void * pStmt, int iCol);


typedef double __cdecl (*Tsqlite3_column_double)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_column_int)(void * pStmt, int iCol);


typedef __int64 __cdecl (*Tsqlite3_column_int64)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_text)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_bind_parameter_count)(void * pStmt);


typedef char * __cdecl (*Tsqlite3_bind_parameter_name)(void * pStmt, int Index);


typedef int __cdecl (*Tsqlite3_bind_blob)(void * pStmt, int Index, void * pBlob, int Size, void * pDestrType);


typedef int __cdecl (*Tsqlite3_bind_zeroblob)(void * pStmt, int Index, int Size);


typedef int __cdecl (*Tsqlite3_bind_double)(void * pStmt, int Index, double Value);


typedef int __cdecl (*Tsqlite3_bind_int)(void * pStmt, int Index, int Value);


typedef int __cdecl (*Tsqlite3_bind_int64)(void * pStmt, int Index, __int64 Value);


typedef int __cdecl (*Tsqlite3_bind_null)(void * pStmt, int Index);


typedef int __cdecl (*Tsqlite3_bind_text)(void * pStmt, int Index, char * Value, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_blob)(void * pContext, void * pBlob, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_double)(void * pContext, double Value);


typedef void __cdecl (*Tsqlite3_result_error)(void * pContext, void * pMsg, int Size);


typedef void __cdecl (*Tsqlite3_result_error16)(void * pContext, void * pMsg, int Size);


typedef void __cdecl (*Tsqlite3_result_error_toobig)(void * pContext);

static const int SQLITE_OPEN_FULLMUTEX = int(0x10000);

static const int SQLITE_OPEN_SHAREDCACHE = int(0x20000);

static const int SQLITE_OPEN_PRIVATECACHE = int(0x40000);

static const int SQLITE_OPEN_WAL = int(0x80000);

static const int PENDING_BYTE = int(0x40000000);

static const int RESERVED_BYTE = int(0x40000001);