thirdparty/unidac/Source/LiteCallVirtual.pas


  TSQLite3 = record
    pVfs: IntPtr;      // OS Interface */
    pVdbe: IntPtr;     // List of active virtual machines */
    pDfltColl: IntPtr; // The default collating sequence (BINARY) */
    mutex: IntPtr;     // Connection mutex */
    aDb: IntPtr;       // All backends */
    nDb: integer;      // Number of backends currently in use */
  end;

  TSQLite3Context = record
    pFunc: pFuncDef;         // Pointer to function information */
  end;

  TSQLite3Context387 = record
    pOut: IntPtr;            // The return value is stored here */
    pFunc: pFuncDef;         // Pointer to function information */
  end;

  pSQLite3 = IntPtr;
  pSQLite3Stmt = IntPtr;
  pSQLite3Context = IntPtr;
  pSQLite3Value = IntPtr;
  pSQLite3Backup = IntPtr;

  pContext = ^TSQLite3Context;
  pContext387 = ^TSQLite3Context387;

  TCallBackLiteCollation = function (
    pUserData: IntPtr;
    StrSize1: Integer; const pStr1: IntPtr;
    StrSize2: Integer; const pStr2: IntPtr
  ): Integer; cdecl;

  TCallBackLiteFunction = procedure (
    Context: pContext;
    ParamCount: Integer;
    pData: IntPtr
  ); cdecl;

  TCallBackLiteFunction387 = procedure (
    Context: pContext387;
    ParamCount: Integer;
    pData: IntPtr
  ); cdecl;

{$IFDEF CUSTOM_VFS}
  psqlite3_file = ^sqlite3_file;
  psqlite3_customfile = ^sqlite3_customfile;
  psqlite3_io_methods = ^sqlite3_io_methods;
  psqlite3_vfs = ^sqlite3_vfs;
  psqlite3_shm_node = ^sqlite3_shm_node;
  psqlite3_shm = ^sqlite3_shm;
  ppsqlite3_shm = ^psqlite3_shm;

  sqlite3_file = record
    pMethods: psqlite3_io_methods;
  end;

  sqlite3_customfile = record
    Methods: psqlite3_io_methods;
    Vfs: psqlite3_vfs;
    Name: string;
    Stream: TStream;
    LockType: byte;
    DeleteOnClose: boolean;
    LastErrno: integer;
    FileType: integer;
    Shm: psqlite3_shm;
    ShmNode: psqlite3_shm_node;
  end;

  sqlite3_io_methods = record
    iVersion: Integer;
    xClose: function (pFile: psqlite3_file): Integer; cdecl;
    xRead: function (pFile: psqlite3_file; buf: Pointer; iAmt: Integer; iOfst: i64): Integer; cdecl;
    xWrite: function (pFile: psqlite3_file; bug: Pointer; iAmt: Integer; iOfst: i64): Integer; cdecl;
    xTruncate: function (pFile: psqlite3_file; size: i64): Integer; cdecl;
    xSync: function (pFile: psqlite3_file; flags: Integer): Integer; cdecl;
    xFileSize: function (pFile: psqlite3_file; var pSize: i64): Integer; cdecl;
    xLock: function (pFile: psqlite3_file; mode: Integer): Integer; cdecl;
    xUnlock: function (pFile: psqlite3_file; mode: Integer): Integer; cdecl;
    xCheckReservedLock: function (pFile: psqlite3_file; var pResOut: Integer): Integer; cdecl;
    xFileControl: function (pFile: psqlite3_file; op: Integer; pArg: Pointer): Integer; cdecl;
    xSectorSize: function (pFile: psqlite3_file): Integer; cdecl;
    xDeviceCharacteristics: function (pFile: psqlite3_file): Integer; cdecl;
    xShmMap: function (pFile: psqlite3_file; iPg: Integer; pgsz: Integer; i: Integer; p: PPointer): Integer; cdecl;
    xShmLock: function (pFile: psqlite3_file; offset: Integer; n: Integer; flags: Integer): Integer; cdecl;
    xShmBarrier: procedure (pFile: psqlite3_file); cdecl;
    xShmUnmap: function (pFile: psqlite3_file; deleteFlag: Integer): Integer; cdecl;
    xFetch: function (pFile: sqlite3_file; iOfst: i64; iAmt: Integer; pp: PPointer): Integer; cdecl;
    xUnfetch: function (pFile: sqlite3_file; iOfst: i64; p: Pointer): Integer; cdecl;
  end;

  sqlite3_vfs = record
    iVersion: Integer;
    szOsFile: Integer;
    mxPathname: Integer;
    pNext: psqlite3_vfs;
    zName: PAnsiChar;
    pAppData: Pointer;
    xOpen: function (pVfs: psqlite3_vfs; zName: PAnsiChar; pFile: psqlite3_file; flags: Integer; var pOutFlags: Integer): Integer; cdecl;
    xDelete: function (pVfs: psqlite3_vfs; zName: PAnsiChar; syncDir: Integer): Integer; cdecl;
    xAccess: function (pVfs: psqlite3_vfs; zName: PAnsiChar; flags: Integer; var pResOut: Integer): Integer; cdecl;
    xFullPathname: function (pVfs: psqlite3_vfs; zName: PAnsiChar; nOut: Integer; zOut: PAnsiChar): Integer; cdecl;
    xDlOpen: function (pVfs: psqlite3_vfs; zFilename: PAnsiChar): Pointer; cdecl;
    xDlError: procedure (pVfs: psqlite3_vfs; nByte: Integer; zErrMsg: PAnsiChar); cdecl;
    xDlSym: function (pVfs: psqlite3_vfs; ptr: Pointer; zSymbol: PAnsiChar): Pointer; cdecl;
    xDlClose: procedure (pVfs: psqlite3_vfs; ptr: Pointer); cdecl;
    xRandomness: function (pVfs: psqlite3_vfs; nBuf: Integer; zOut: PAnsiChar): Integer; cdecl;
    xSleep: function (pVfs: psqlite3_vfs; microseconds: Integer): Integer; cdecl;
    xCurrentTime: function (pVfs: psqlite3_vfs; var tm: double): Integer; cdecl;
    xGetLastError: function (pVfs: psqlite3_vfs; l: Integer; v: PAnsiChar): Integer; cdecl;
    xCurrentTimeInt64: function (pVfs: psqlite3_vfs; var tm: i64): Integer; cdecl;
    xSetSystemCall: function (pVfs: psqlite3_vfs; zName: PAnsiChar; p: pointer): Integer; cdecl;
    xGetSystemCall: function (pVfs: psqlite3_vfs; zName: PAnsiChar): pointer; cdecl;
    xNextSystemCall: function (pVfs: psqlite3_vfs; zName: PAnsiChar): PAnsiChar; cdecl;
  end;

  sqlite3_shm_node = record
//    unixInodeInfo *pInode;
//    sqlite3_mutex *mutex;
//    char *zFilename;
//    int h;
    szRegion: integer;
    nRegion: u16;
    isReadonly: u8;
    apRegion: array of pointer;
    nRef: integer;
    pFirst: psqlite3_shm;
  end;

  sqlite3_shm = record
    pShmNode: psqlite3_shm_node;
    pNext: psqlite3_shm;
    hasMutex: u8;
    id: u8;
    sharedMask: u16;
    exclMask: u16;
  end;
{$ENDIF}

{$IFDEF CODEC}
  ptm = ^stm;
  stm = packed record
    tm_sec: integer;
    tm_min: integer;
    tm_hour: integer;
    tm_mday: integer;
    tm_mon: integer;
    tm_year: integer;
    tm_wday: integer;
    tm_yday: integer;
    tm_isdst: integer;
  end;

  psqlite3_codec = ^sqlite3_codec;

  sqlite3_codec = record
    xKeyV2: function (pSQLite: pSQLite3; dbName, key: PAnsiChar; size: Integer): integer; cdecl;
    xRekeyV2: function (pSQLite: pSQLite3; dbName, newkey: PAnsiChar; size: Integer): integer; cdecl;
    xActivateSee: procedure (zPassPhrase: PAnsiChar); cdecl;
    xCodecAttach: function (pSQLite: pSQLite3; nDb: integer; key: PAnsiChar; size: Integer; Algorithm: TLiteEncryptionAlgorithm = DefaultEncryptionAlgorithm): integer; cdecl;
    xCodecGetKey: procedure (pSQLite: pSQLite3; nDb: integer; var key: pointer; var size: {$IFDEF POSIX}pointer{$ELSE}pInt{$ENDIF}); cdecl;
    xCustomPragma: function(pSQLite: pSQLite3; nDb: Integer; Left: PAnsiChar; Right: PAnsiChar): integer; cdecl;
  {$IFDEF USE_CUSTOM_LOCALTIME}
    xCustomLocaltime: function(timer: pointer): ptm; cdecl;
  {$ENDIF}
  end;
{$ENDIF}

  // functions
  Tsqlite3_malloc = function(
    n: integer
  ): IntPtr; cdecl;

  Tsqlite3_open = function(
    filename: PAnsiChar;    // Database filename (UTF-8)
    out ppDb: pSQLite3      // OUT: SQLite db handle
  ): Integer; cdecl;

  Tsqlite3_open16 = function(
    filename: PWideChar;    // Database filename (UTF-16)
    out ppDb: pSQLite3      // OUT: SQLite db handle
  ): Integer; cdecl;

  Tsqlite3_open_v2 = function(
    filename: PAnsiChar;    // Database filename (UTF-8)
    out ppDb: pSQLite3;     // OUT: SQLite db handle
    flags: Integer;         // Flags
    zVfs: PAnsiChar         // Name of VFS module to use
  ): Integer; cdecl;

  Tsqlite3_close = function(
    pDb: pSQLite3
  ): Integer; cdecl;

  Tsqlite3_errcode = function(
    pDb: pSQLite3
  ): Integer; cdecl;

  Tsqlite3_extended_errcode = function(
    pDb: pSQLite3
  ): Integer; cdecl;

  Tsqlite3_extended_result_codes = function(
    pDb: pSQLite3;
    onoff: Integer
  ): Integer; cdecl;

  Tsqlite3_errmsg = function(
    pDb: pSQLite3
  ): PAnsiChar; cdecl;

  Tsqlite3_last_insert_rowid = function(
    pDb: pSQLite3
  ): Int64; cdecl;

  Tsqlite3_changes = function(
    pDb: pSQLite3
  ): Integer; cdecl;

  Tsqlite3_prepare_v2 = function(
    db: pSQLite3;           // Database handle
    zSql: PAnsiChar;        // SQL statement, UTF-8 encoded
    nByte: Integer;         // Maximum length of zSql in bytes.
    out ppStmt: pSQLite3Stmt;  // OUT: Statement handle
    out pzTail: IntPtr          // OUT: Pointer to unused portion of zSql
  ): Integer; cdecl;

  Tsqlite3_step = function(
    pStmt: pSQLite3Stmt
  ): Integer; cdecl;

  Tsqlite3_reset = function(
    pStmt: pSQLite3Stmt
  ): Integer; cdecl;

  Tsqlite3_finalize = function(
    pStmt: pSQLite3Stmt
  ): Integer; cdecl;

  Tsqlite3_column_count = function(
    pStmt: pSQLite3Stmt
  ): Integer; cdecl;

  Tsqlite3_column_type = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): Integer; cdecl;

  Tsqlite3_column_name = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): PAnsiChar; cdecl;

  Tsqlite3_column_origin_name = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): PAnsiChar; cdecl;

  Tsqlite3_column_table_name = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): PAnsiChar; cdecl;

  Tsqlite3_column_database_name = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): PAnsiChar; cdecl;

  Tsqlite3_column_decltype = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): PAnsiChar; cdecl;

  Tsqlite3_table_column_metadata = function(
    pDb: pSQLite3;
    zDbName: IntPtr;
    zTableName: IntPtr;
    zColumnName: IntPtr;
    out pzDataType: IntPtr;
    out pzCollSeq: IntPtr;
    out pNotNull: Integer;
    out pPrimaryKey: Integer;
    out pAutoinc: Integer
  ): Integer; cdecl;

  Tsqlite3_column_blob = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): IntPtr; cdecl;

  Tsqlite3_column_bytes = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): Integer; cdecl;

  Tsqlite3_column_double = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): double; cdecl;

  Tsqlite3_column_int = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): Integer; cdecl;

  Tsqlite3_column_int64 = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): int64; cdecl;

  Tsqlite3_column_text = function(
    pStmt: pSQLite3Stmt; iCol: Integer
  ): PAnsiChar; cdecl;

  Tsqlite3_bind_parameter_count = function(
    pStmt: pSQLite3Stmt
  ): Integer; cdecl;

  Tsqlite3_bind_parameter_name = function(
    pStmt: pSQLite3Stmt; Index: integer
  ): PAnsiChar; cdecl;

  Tsqlite3_bind_blob = function(
    pStmt: pSQLite3Stmt; Index: Integer; pBlob: IntPtr; Size: Integer; pDestrType: IntPtr
  ): Integer; cdecl;

  Tsqlite3_bind_zeroblob = function(
    pStmt: pSQLite3Stmt; Index: Integer; Size: Integer
  ): Integer; cdecl;

  Tsqlite3_bind_double = function(
    pStmt: pSQLite3Stmt; Index: Integer; Value: Double
  ): Integer; cdecl;

  Tsqlite3_bind_int = function(
    pStmt: pSQLite3Stmt; Index: Integer; Value: Integer
  ): Integer; cdecl;

  Tsqlite3_bind_int64 = function(
    pStmt: pSQLite3Stmt; Index: Integer; Value: Int64
  ): Integer; cdecl;

  Tsqlite3_bind_null = function(
    pStmt: pSQLite3Stmt; Index: Integer
  ): Integer; cdecl;

  Tsqlite3_bind_text = function(
    pStmt: pSQLite3Stmt; Index: Integer; Value: PAnsiChar; Size: Integer; pDestrType: IntPtr
  ): Integer; cdecl;

  Tsqlite3_result_blob = procedure(
    pContext: pSQLite3Context; pBlob: IntPtr; Size: Integer; pDestrType: IntPtr
  ); cdecl;

  Tsqlite3_result_double = procedure(
    pContext: pSQLite3Context; Value: Double
  ); cdecl;

  Tsqlite3_result_error = procedure(
    pContext: pSQLite3Context; pMsg: IntPtr; Size: Integer
  ); cdecl;

  Tsqlite3_result_error16 = procedure(
    pContext: pSQLite3Context; pMsg: IntPtr; Size: Integer
  ); cdecl;

  Tsqlite3_result_error_toobig = procedure(
    pContext: pSQLite3Context
  ); cdecl;
